--- a/src/index.html
+++ b/src/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>Ionic AR App</title>
 
-  <base href="/" />
-
-  <meta name="color-scheme" content="light dark" />
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
   <meta name="format-detection" content="telephone=no" />
   <meta name="msapplication-tap-highlight" content="no" />
+
+  <!-- A-Frame e AR.js -->
   <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/jeromeetienne/AR.js/aframe/build/aframe-ar.js"></script>
-  
+
   <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
-
-  <!-- add to homescreen for ios -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 </head>
-
-<body>
+<body style="margin: 0; overflow: hidden;">
   <app-root></app-root>
-</body>
 
+  <!-- Scena A-Frame AR -->
+  <a-scene embedded arjs>
+    <!-- Aggiungi un marker e un oggetto AR -->
+    <a-marker preset="hiro">
+      <!-- Ad esempio, un cubo per testare la visualizzazione -->
+      <a-box position="0 0.5 0" material="color: yellow;"></a-box>
+    </a-marker>
+    <!-- Aggiungi una camera per la scena AR -->
+    <a-entity camera></a-entity>
+  </a-scene>
+</body>
 </html>
